[package]
name = "rust_epaper29"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["thumbv6m-none-eabi"]

[profile.dev]
debug = 1

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
rp-pico = "0.8.0"
log = "0.4.20"
rtt-target = "0.4.0"
panic-probe = { version = "0.2", features = ["print-rtt"] }
